# Centralized-Exchange

./: README.md
api/: Cargo.toml
api/src/: main.rs  redis_manager.rs  types.rs
api/src/handlers/: depth.rs  klines.rs  mod.rs  order.rs  tickers.rs  trades.rs
db/: Cargo.toml
db/migrations/: 001_create_tables.sql
db/src/: main.rs
engine/: Cargo.toml
engine/src/: main.rs  redis_manager.rs  types.rs
engine/src/trades/: engine.rs  events.rs  mod.rs  orderbook.rs
ws/: Cargo.toml
ws/src/: main.rs  subscription_manager.rs  types.rs  user.rs  user_manager.rs
