[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
redis = { version = "0.23", features = ["tokio-comp", "aio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
futures-util = "0.3"
dotenv = "0.15"
engine = { path = "../engine" }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "rust_decimal",
] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.37"
