[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
redis = { version = "0.23", features = ["tokio-comp", "aio"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
engine = { path = "../engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
