[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
redis = { version = "0.23", features = ["tokio-comp", "aio"] }
dotenv = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.30", features = ["serde"] }
rand = "0.8"
chrono = "0.4"
